# blockberg

./: README.md
backend/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  world-config.json
backend/programs-ecs/components/competition/: Cargo.toml
backend/programs-ecs/components/competition/src/: lib.rs
backend/programs-ecs/components/leaderboard/: Cargo.toml
backend/programs-ecs/components/leaderboard/src/: lib.rs
backend/programs-ecs/components/position/: Cargo.toml
backend/programs-ecs/components/position/src/: lib.rs
backend/programs-ecs/components/trading-account/: Cargo.toml
backend/programs-ecs/components/trading-account/src/: lib.rs
backend/programs-ecs/crates/types/: Cargo.toml
backend/programs-ecs/systems/close-position/: Cargo.toml
backend/programs-ecs/systems/close-position/src/: lib.rs
backend/programs-ecs/systems/join-competition/: Cargo.toml
backend/programs-ecs/systems/join-competition/src/: lib.rs
backend/programs-ecs/systems/open-position/: Cargo.toml
backend/programs-ecs/systems/open-position/src/: lib.rs
backend/programs-ecs/systems/settle-competition/: Cargo.toml
backend/programs/contracts/: Cargo.toml
backend/programs/contracts/src/: lib.rs
frontend-latest/: main.rs  package-lock.json  package.json  vite.config.ts
frontend-latest/src/: app.html
frontend-latest/src/lib/: magicblock.ts
frontend-latest/src/lib/wallet/: WalletButton.svelte  WalletModal.svelte  stores.ts
frontend-latest/src/routes/: +layout.svelte  +page.svelte
frontend-latest/src/routes/competition/: +page.svelte
nfts/nft-metadata/: bronze-trophy.json  gold-trophy.json  silver-trophy.json
nfts/settle-competition/: keypair.json
nfts/settle-competition/src/: lib.rs
