[package]
name = "paper-trading"
version = "0.1.0"
description = "Paper Trading Platform on Solana with Pyth Integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "paper_trading"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.1"
bolt-lang = "0.1.12"

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"
tokio = "1.35.0"